# hugging-face-inference-api-wrapper

./: Cargo.toml  README.md
src/: lib.rs
src/api/: emotion.rs  mod.rs  question.rs  token_classification.rs
src/errors/: mod.rs
