[package]
name = "hg_api"
version = "0.2.2"
edition = "2021"
author = "yvonne-aizawa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version =  "1.28.2", features = ["rt-multi-thread", "macros"] }

