[package]
name = "hg_api"
version = "0.3.0"
edition = "2021"
author = "yvonne-aizawa"
license = "GPL-3.0"
description = "this package is a small wrapper for hugging face Inference API"
repository = "https://github.com/Yvonne-Aizawa/hugging-face-inference-api-wrapper"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version =  "1.28.2", features = ["rt-multi-thread", "macros"] }

